--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta property="og:image:height" content="400">
   <meta property="og:description" content="Radio Extra, Música 24 Hrs">
   <meta name="description" content="Disfruta de la mejor música latina en Radio Extra, tu radio en vivo en Cabimas, Zulia. ¡Sintoniza ahora y déjate llevar por el ritmo latino!">
+  <link rel="canonical" href="https://radioextra.site"/>
   <script src="https://kit.fontawesome.com/65c161370e.js" crossorigin="anonymous"></script>
   
   
