--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <meta property="og:image:width" content="600">
   <meta property="og:image:height" content="400">
   <meta property="og:description" content="Radio Extra, Música 24 Hrs">
+   <!-- Etiquetas adicionales para Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Radio Extra | Cabimas">
+  <meta name="twitter:description" content="Descripción de la página">
+  <meta name="twitter:image" content="https://radioextra.site/assets/images/radioextra-ogg.jpg">
   <meta name="description" content="Disfruta de la mejor música latina en Radio Extra, tu radio en vivo en Cabimas, Zulia. ¡Sintoniza ahora y déjate llevar por el ritmo latino!">
   <link rel="canonical" href="https://radioextra.site"/>
   <script src="https://kit.fontawesome.com/65c161370e.js" crossorigin="anonymous"></script>
