--- a/index.html
+++ b/index.html
@@ -445,8 +445,8 @@
   !-- PopUp -->
     <div id="popup" class="popup-overlay">
         <div class="popup-content">
-            <h2>Mensaje de Cookies</h2>
-            <p>Utilizamos cookies para mejorar tu experiencia en nuestro sitio web. Al hacer clic en <b>"Aceptar"</b>, aceptas el uso de <a href="">cookies.</p></a>
+            <h2>¡Estamos en Mantenimiento</h2>
+            <p>Si experimentas fallas en el audio, espera unos minutos y actualiza la página. ¡Gracias! :-) <b>"Aceptar"</b>Acepto el uso de <a href="">cookies.</p></a>
             <button onclick="closePopup()">Aceptar</button>
         </div>
     </div>
