--- a/index.html
+++ b/index.html
@@ -445,8 +445,8 @@
   !-- PopUp -->
     <div id="popup" class="popup-overlay">
         <div class="popup-content">
-            <h2>¡Estamos en Mantenimiento</h2>
-            <p>Si experimentas fallas en el audio, espera unos minutos y actualiza la página. ¡Gracias! :-) <b>"Aceptar"</b>Acepto el uso de <a href="">cookies.</p></a>
+            <h2>¿Te gusta la Radio?</h2>
+            <p>¡Anuncia en éste PopUp y obtén un alcance increíble! Serás el primero. :-) Contáctanos al formulario de contacto. <b><a href="https://radioextra.site/contacto.html">¡Ir al Formulario!</a></b></p></a>
             <button onclick="closePopup()">Aceptar</button>
         </div>
     </div>
