--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
     <div id="popup" class="popup-overlay">
         <div class="popup-content">
             <h2>¿Te gusta la Radio?</h2>
-            <p>¡Anuncia en éste PopUp y obtén un alcance increíble! Serás el primero. :-) Contáctanos al formulario de contacto. <b><a href="https://radioextra.site/contacto.html">¡Ir al Formulario!</a></b></p></a>
+            <p>¡Anuncia en éste PopUp y obtén un alcance increíble! Serás el primero. :-) Contáctanos al formulario. <a href="https://radioextra.site/contacto.html"><b>¡CLICK AQUI!</b></p></a>
             <button onclick="closePopup()">Aceptar</button>
         </div>
     </div>
