--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="twitter:description" content="Descripción de la página">
   <meta name="twitter:image" content="https://radioextra.site/assets/images/radioextra-ogg.jpg">
   <meta name="description" content="Disfruta de la mejor música latina en Radio Extra, tu radio en vivo en Cabimas, Zulia. ¡Sintoniza ahora y déjate llevar por el ritmo latino!">
-  <link rel="canonical" href="https://radioextra.site"/>
+  <link rel="canonical" href="https://radioextra.site">
   <script src="https://kit.fontawesome.com/65c161370e.js" crossorigin="anonymous"></script>
   
   
