--- a/noches-a-mil.html
+++ b/noches-a-mil.html
@@ -29,6 +29,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+   <link rel="canonical" href="https://radioextra.site/noches-a-mil.html">
   
    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-4EY4C1XBWY"></script>
