--- a/empresas/index.html
+++ b/empresas/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  <link rel="canonical" href="https://radioextra.site/blog/index.html"/>
+  <link rel="canonical" href="https://radioextra.site/empresas"/>
   
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-4EY4C1XBWY"></script>
@@ -117,11 +117,11 @@
 
             <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><a href="https://radioextra.site/blog/monetizar-programa-de-radio-en-vivo.html">Centro Óptica Las Karolinas | Cabimas Zulia.</a><br>
 
-            <a href="https://radioextra.site/blog/emisoras-en-vivo-las-mejores-estaciones-de-radio.html">Cool Shop Refrigeración | Cabimas, Zulia</a><br>
+            <a href="https://radioextra.site/empresas/coolshop-refrigeracion-cabimas-zulia.html">Cool Shop Refrigeración | Cabimas, Zulia</a><br>
 
-            <a href="https://radioextra.site/blog/como-hacer-publicidad-para-mi-negocio.html">              Rosalbina Reposteria | Cabimas, Zulia</a><br>
+            <a href="https://radioextra.site/empresas/rosalbina-reposteria-cabimas-zulia.html">             Rosalbina Reposteria | Cabimas, Zulia</a><br>
 
-            <a href="https://radioextra.site/blog/como-hacer-publicidad-para-mi-negocio.html">              Deportes y Música COL | Cabimas, Zulia</a><br>
+            <a href="https://radioextra.site/empresas/deportes-y-musica-col-cabimas-zulia.html">            Deportes y Música COL | Cabimas, Zulia</a><br>
 
 
             <strong>&nbsp;</strong></div><br><br>
