--- a/empresas/coolshop-refrigeracion-cabimas-zulia.html
+++ b/empresas/coolshop-refrigeracion-cabimas-zulia.html
@@ -11,7 +11,7 @@
   <meta name="twitter:title" content="Empresas | Radio Extra">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/ico-radio.png" type="image/x-icon">
-  <meta name="description" content="Dos pasiones un solo sitio, Deportes y Música Col en Cabimas, Estado Zulia. Contacto al Teléfono... (Actualizado 18/07/2023)">
+  <meta name="description" content="Refrigeración: Automotriz Doméstica Industrial Con mas de 20 años en el Mercado Nacional... (Actualizado 18/07/2023)">
   
   
   <title>Cool Shop: Regigeración en Cabimas, Zulia - RadioExtra.site</title>
