--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
-                                <a href="https://futurafm.gob.ve/" target="_blank"><img src="assets/images/futura1-1-120x120.png" class="img-responsive clients-img" alt="" title=""></a>
+                                <a href="https://instagram.com/soy_decabimas" target="_blank"><img src="assets/images/soydecabimas.png" class="img-responsive clients-img" alt="" title=""></a>
                             </div>
                         </div>
                     </div>
